--- a/ProjectSmS/school_website/core/static/css/styles.css
+++ b/ProjectSmS/school_website/core/static/css/styles.css
@@ -191,3 +191,42 @@ button[type="submit"]:hover {
 .mt-2 { margin-top: 2em; }
 .mb-1 { margin-bottom: 1em; }
 .mb-2 { margin-bottom: 2em; }
+
+.dropdown {
+    display: inline-block;
+    position: relative;
+}
+
+.dropbtn {
+    background: #3498db;
+    color: white;
+    padding: 8px 12px;
+    font-size: 14px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 10px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
