--- a/ProjectSmS/school_website/core/templates/core/admin_dashboard.html
+++ b/ProjectSmS/school_website/core/templates/core/admin_dashboard.html
@@ -9,6 +9,9 @@
 <p>Total Events: {{ event_count }}</p>
 <p>Total Teachers: {{ teachers_count }}</p>
 <p>Total Students: {{ students_count }}</p>
+<p>Total Parents: {{ parents_count }}</p>
 <p><a href="{% url 'manage_news' %}">Manage News</a></p>
 <p><a href="{% url 'manage_events' %}">Manage Events</a></p>
+
+
 {% endblock %}
