--- a/29_JSON_weatherAPI/app1.css
+++ b/29_JSON_weatherAPI/app1.css
@@ -43,6 +43,7 @@ button[type="submit"] {
     width: 100%;
     max-width: 300px;
     margin: 10px 0;
+    text-transform: uppercase;
 }
 
 button:hover {
